# deepler

./: .gitignore  README.md  pyproject.toml
deepler/: cli.py  constants.py
deepler/core/: configuration.py  histogram.py  translator.py  word_splitter.py
